--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-12 col-md-6 col-xl-4"><a class="portfolio-item" href="#"><img class="img-fluid" src="img/portfolio/med.jpg" alt="med"/></a></div>
-          <div class="col-sm-12 col-md-6 col-xl-4"><a class="portfolio-item" href="#"><img class="img-fluid" src="img/portfolio/ave.jpg" alt="ave"/></a></div>
-          <div class="col-sm-12 col-md-6 col-xl-4"><a class="portfolio-item" href="#"><img class="img-fluid" src="img/portfolio/freelancer.jpg" alt="freelancer"/></a></div>
-          <div class="col-sm-12 col-md-6 col-xl-4"><a class="portfolio-item" href="#"><img class="img-fluid" src="img/portfolio/voila.jpg" alt="voila"/></a></div>
-          <div class="col-sm-12 col-md-6 col-xl-4"><a class="portfolio-item" href="#"><img class="img-fluid" src="img/portfolio/weather.jpg" alt="weather"/></a></div>
-          <div class="col-sm-12 col-md-6 col-xl-4"><a class="portfolio-item" href="#"><img class="img-fluid" src="img/portfolio/portland.jpg" alt="portland"/></a></div>
+          <div class="col-sm-12 col-md-6 col-xl-4"><a class="portfolio-item" href="https://emamedov94.github.io/Med"><img class="img-fluid" src="img/portfolio/med.jpg" alt="med"/></a></div>
+          <div class="col-sm-12 col-md-6 col-xl-4"><a class="portfolio-item" href="https://emamedov94.github.io/Ave"><img class="img-fluid" src="img/portfolio/ave.jpg" alt="ave"/></a></div>
+          <div class="col-sm-12 col-md-6 col-xl-4"><a class="portfolio-item" href="https://emamedov94.github.io/Freelancer"><img class="img-fluid" src="img/portfolio/freelancer.jpg" alt="freelancer"/></a></div>
+          <div class="col-sm-12 col-md-6 col-xl-4"><a class="portfolio-item" href="https://emamedov94.github.io/Voila"><img class="img-fluid" src="img/portfolio/voila.jpg" alt="voila"/></a></div>
+          <div class="col-sm-12 col-md-6 col-xl-4"><a class="portfolio-item" href="https://emamedov94.github.io/FunWeather"><img class="img-fluid" src="img/portfolio/weather.jpg" alt="FunWeather"/></a></div>
+          <div class="col-sm-12 col-md-6 col-xl-4"><a class="portfolio-item" href="https://emamedov94.github.io/Portland"><img class="img-fluid" src="img/portfolio/portland.jpg" alt="portland"/></a></div>
         </div>
       </div>
     </section>
